--- a/style.css
+++ b/style.css
@@ -10,18 +10,16 @@ html{
 
 body{
     height: 100%;
-    background-color: #4F76B0;
+    background-color: #49617E;
 }
 
-header{
-    width: 100%;
-    height: 769px;
-    background-image: url(/assets/background.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center top;
-    box-shadow: 2px 2px 5px;
+/*Espaçamento*/
+.esp{
+    letter-spacing: 10px;
 }
+
+
+/* HEADER */
 
 .imagem{
     width: 338px;
@@ -30,44 +28,72 @@ header{
     padding-top: 149px;
     padding-right: 70px;
 }
+header{
+    width: 100%;
+    height: 550px;
+    background-image: url(/assets/background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top;
+    box-shadow: 2px 2px 5px;
+}
 
 .texto{
-        padding: 300px 800px 100px 100px;
+    padding: 150px 800px 0px 100px;
 }
 
 header span{
-    font-weight: bold;
-    color: #4F76B0;
+    color: #49617E;
 }
 
 header h1, h2{
-    margin-bottom: 20px;
     font-weight: 700;
     font-size: 30px;
+    text-transform: capitalize;  /*Primeiras letras maiusculas */
 }
 
 h1 {
     padding-left: 200px;
+    margin-top: 10px;
 }
 header h3{
+    margin-top: 20px;
     font-size: 22px;
     font-weight: 600;
+    margin: 50px 0px;
+    letter-spacing: 2px;
+    word-spacing: 2px;          /*Espaços entre as palavras*/
 }
 
-nav{
-    margin-top: 90px;
-}
 
-nav a{
+
+/* BUTTON */
+.btn-contact{
     padding-left: 100px;
-    font-size: 20px;
-    color: #000;
 }
 
-.hs {
-    margin:70px;
+.btn{
+    padding: 10px 30px;
+    border-radius: 25px;
+    margin-right: 20px;
+}
+
+.destaque{
+    font-size: 20px;
+    color: #fff;
+    background-color: #264F81;
+    text-decoration: none;
+    box-shadow: 2px 2px 1px 1px #000;
+}
+
+
+
+/* HARD SKILL */
+.hs h2{
     text-align: center;
     color: #FAFAFA;
+    padding: 0px 700px;
+    margin-top: 150px;
 }
 
 .hard {
@@ -76,57 +102,99 @@ nav a{
     background-color: #ffff;
     display: flex;
     justify-content: space-around;
-    position: relative;
-    box-shadow: 0px 1px 6px;
+    box-shadow: 0px 1px 20px;
 }
 
 .box img {
     margin-top: 10px;
+    margin-right: 50px;
 }
 
-.btnsoft{  
-    display: flex;
-    justify-content: center;  
+
+
+/* SOFT SKILLS */
+.soft-content {
+    height: 25%;
 }
 
-.btnsoft btn{
-    width: 283px;
-    height: 56px;
-}
-.softport {
-    width: 100%;
-    height: 50%;
+.soft{
+    padding: 0px 700px;
 }
 
-.softport h2{
+.soft-content h2{
     text-align: center;
-    margin-top: 40px;
+    margin-top: 150px;
+    margin-bottom: 30px;
     color: #FAFAFA;
 }
 
+.destaque-soft {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 700;
+    letter-spacing: 5px;
+    color: #000;
+    background-color: #fff;
+    box-shadow: 2px 2px 1px 1px #000;
+    margin-top: 20px;
+    padding: 10px 0px;
+    border-radius: 15px;
+}
+
+
+/*SPACE AROUND HARD SKILL, REDES SOCIAIS E PORTFOLIO*/
+.adaptative{  
+    display: flex;
+    justify-content: space-around;  
+    flex-wrap: wrap;
+    padding: 0px 25%;
+}
+
+
+
+/*PORTFOLIO*/
+.port-content{
+    height: 100%;
+}
+
+.port-acess{
+    width: 356px;
+    height: 189px;
+}
+
+.port-style{
+    background-color: burlywood;
+}
+
+hr {
+    margin-bottom: 50px;
+}
+
+
+
+/* REDES SOCIAIS */
 .redes {
     position: relative;
-    width: 100%;
-    height: 150px;
-    padding-top: 30px;
+    height: 160px;
     background-color:#fff;
     box-shadow: 0px 1px 10px;
 }
 
 .redes img{
-    position:absolute;
-    top:50%;
-    left:50%;
-    margin-top:-50px;
-    margin-left:-50px;
+    width: 60px;
+    height: 60px;
+    padding: 30px 0px;
 }
+
+
+
 
 footer {
     width: 100%;
     height: 45px;
     position: fixed;
     bottom: 0px;
-    background-color: #4F76B0;
+    background-color: #49617E;
     color: #FBFBFB;
     border-top: solid;
     border-width: 1px;
